--- a/MVCMeetCalendarProj/Views/Home/Bookings.cshtml
+++ b/MVCMeetCalendarProj/Views/Home/Bookings.cshtml
@@ -176,38 +176,41 @@
         //   else{
         //       alert('jQuery.ui loaded');
         //   }
-            var ch = e;
+            var ch = e.text.length;
+            if (ch > 5) {
+                alert('This slot is already booked!');
+            } else {
 
-
-            $('<div></div>').appendTo('body')
-                .html('<div><h6>' + 'Booker: ' 
-                      + '<br/>   <p> </p>'
-    + '   <select id="postage">                      '
-    + '       <option value="">Please select...</option>    '
-    + '       <option value="1">Big Boss</option>    '
-    + '       <option value="2">Tina Sparkle</option>      '
-    + '       <option value="3">Frank </option>      '
-    + '       <option value="4">Murray</option>      '
-    + '       <option value="4">Unknown</option>      '
-    + '   </select>'   + '</h6></div>')
-                .dialog({
-                    modal: true, title: 'Booking Details ', zIndex: 10000, autoOpen: true,
-                    width: 'auto', resizable: false,
-                    buttons: {
-                        Cancel: function () {
-                            $(this).dialog("close");
+                $('<div></div>').appendTo('body')
+                    .html('<div><h6>' + 'Booker: ' 
+                          + '<br/>   <p> </p>'
+        + '   <select id="postage">                      '
+        + '       <option value="">Please select...</option>    '
+        + '       <option value="1">Big Boss</option>    '
+        + '       <option value="2">Tina Sparkle</option>      '
+        + '       <option value="3">Frank </option>      '
+        + '       <option value="4">Murray</option>      '
+        + '       <option value="4">Unknown</option>      '
+        + '   </select>'   + '</h6></div>')
+                    .dialog({
+                        modal: true, title: 'Booking Details ', zIndex: 10000, autoOpen: true,
+                        width: 'auto', resizable: false,
+                        buttons: {
+                            Cancel: function () {
+                                $(this).dialog("close");
+                            },
+                            Book: function () {
+                                var Name = $('#postage').find(":selected").text();
+                                book(Name, e);
+                                $(this).dialog("close");
+                            }
                         },
-                        Book: function () {
-                            var Name = $('#postage').find(":selected").text();
-                            book(Name, e);
-                            $(this).dialog("close");
-                        }
-                    },
-                    close: function (event, ui) {
+                        close: function (event, ui) {
 
-                        $(this).remove();
-                    }
-                });
+                            $(this).remove();
+                        }
+                    });
+            }
         }
 
     </script>
